--- a/app/components/description-input/template.hbs
+++ b/app/components/description-input/template.hbs
@@ -1,1 +1,5 @@
-{{yield}}
+<label for="exercise"> Workout Description</label>
+{{input type="text"
+        id="description"
+        placeholder="Description"
+        value=description}}
