--- a/app/components/duration-input/template.hbs
+++ b/app/components/duration-input/template.hbs
@@ -1,1 +1,5 @@
-{{yield}}
+<label for="exercise"> Workout Duration</label>
+{{input type="text"
+        id="duration"
+        placeholder="Duration"
+        value=duration}}
