--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -8,20 +8,22 @@
         <li>{{#link-to "users"}}Users{{/link-to}}</li>
         {{/if}}
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-left">
         {{#if isAuthenticated}}
-        <li>{{#link-to "change-password"}}Change Password{{/link-to}}</li>
-        <li><a href="#" {{action "signOut"}}>Sign Out</a></li>
+          <li>{{#link-to "create-exercise"}}Create Exercise{{/link-to}}</li>
+          <li>{{#link-to "change-password"}}Change Password{{/link-to}}</li>
+          <li><a href="#" {{action "signOut"}}>Sign Out</a></li>
         {{else}}
-        <li>{{#link-to "sign-up"}}Sign Up{{/link-to}}</li>
-        <li>{{#link-to "sign-in"}}Sign In{{/link-to}}</li>
+          <li>{{#link-to "sign-up"}}Sign Up{{/link-to}}</li>
+          <li>{{#link-to "sign-in"}}Sign In{{/link-to}}</li>
         {{/if}}
       </ul>
     </div>
   </div>
 </nav>
 
-<h1>Welcome to Ember!</h1>
+<h1>Welcome to Play together!</h1>
+<h2> An application which allows you to log your exercises, your way!</h2>
 
 {{#each flashMessages.queue as |flash|}}
   {{flash-message flash=flash}}
