--- a/app/exercise/template.hbs
+++ b/app/exercise/template.hbs
@@ -1,3 +1,1 @@
-{{my-exercises exercise=model  deleteWorkout='deleteWorkout' createWorkout='createWorkout' edit='editWorkout' save='save'
-
-//toggleWorkoutDone='toggleWorkoutDone'
+{{my-exercises exercise=model  deleteWorkout='deleteWorkout' createWorkout='createWorkout' edit='editWorkout' save='save'}}
