Add favorite exercise
change add favorite exercise to model
create the markup that will inject this
motivation, username, location, favorite exercise
label as "favorite"
generate new component for profile-update

--- a/app/profile/template.hbs
+++ b/app/profile/template.hbs
@@ -4,6 +4,8 @@
 {{model.location}} <br>
 <label for="motivation">Motivation:</label>
 {{model.motivation}} <br>
+<label for="favorite">Favorite Exercise Method:</label>
+{{model.favorite}} <br>
 
 <h3>Public Exercises</h3>
 {{#each model.exercises as |exercise|}}
