Fix auth Profile sign up
modified the route to profiles/edit
added a new path in the router
modified the model
tested the create action on the front end

--- a/app/components/sign-in-form/template.hbs
+++ b/app/components/sign-in-form/template.hbs
@@ -1,10 +1,12 @@
+<div class="auth-user">
 {{email-input email=credentials.email}}
 {{password-input password=credentials.password}}
+</div>
 
-<button type="submit" class="btn btn-primary" {{action "submit"}}>
-  Sign In
-</button>
+<div class="row">
+<span{{action "reset"}} class="col-md-3 col-md-offset-3">{{#link-to "application"}}<a><br>
+    Cancel</a>{{/link-to}}</span>
 
-<button class="btn btn-default" {{action "reset"}}>
-  Cancel
-</button>
+<span{{action "submit"}} class="col-md-3"><a><br>
+  Sign In </a></span>
+</div>
