--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -1,34 +1,37 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     {{navbar-header}}
-
+    {{#link-to "application" class="navbar-brand"}}Home Page{{/link-to}}
     <div class="collapse navbar-collapse" id="navigation">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-right">
         {{#if isAuthenticated}}
-        <li>{{#link-to "users"}}Users{{/link-to}}</li>
-        {{/if}}
-      </ul>
-      <ul class="nav navbar-nav navbar-left">
-        {{#if isAuthenticated}}
-          <li>{{#link-to "create-exercise"}}Create Exercise{{/link-to}}</li>
-          <li>{{#link-to "change-password"}}Change Password{{/link-to}}</li>
-          <li><a href="#" {{action "signOut"}}>Sign Out</a></li>
+        <li class="home col-sm-2"><a href="profiles" {{action "viewProfile"}}> <br> Profile </a></li>
+        <li class="home col-sm-2"><a href="#" {{action "signOut"}}> <br> Sign Out</a></li>
         {{else}}
-          <li>{{#link-to "sign-up"}}Sign Up{{/link-to}}</li>
-          <li>{{#link-to "sign-in"}}Sign In{{/link-to}}</li>
+        <li>{{#link-to "sign-up"}}Sign Up{{/link-to}}</li>
+-       <li>{{#link-to "sign-in"}}Sign In{{/link-to}}</li>
         {{/if}}
       </ul>
     </div>
   </div>
 </nav>
 
-<h1>Welcome to Play together!</h1>
-<h2> An application which allows you to log your exercises, your way!</h2>
-
-{{#each flashMessages.queue as |flash|}}
-  {{flash-message flash=flash}}
-{{/each}}
-
-<div class="col-md-8 col-md-offset-2">
+{{#if isAuthenticated}}
+<div class="container-fluid outlet col-lg-12 col-centered">
+  <div class="centered">
+    <div class="landing">
+    <h1>Play Together</h1>
+  </div>
   {{outlet}}
+  </div>
 </div>
+{{else}}
+<div class="container-fluid outlet col-lg-12 col-centered">
+  <div class="centered">
+  <h1>Play Together</h1>
+  <h4>Welcome to Encore, a place where you can log your exercises, your way. No
+  restrictions, no expectations</h4>
+  {{outlet}}
+  </div>
+</div>
+{{/if}}
