--- a/app/components/profile-update/template.hbs
+++ b/app/components/profile-update/template.hbs
@@ -29,7 +29,7 @@
 
 
 <div class="row">
-<span class="col-md-3 col-md-offset-3" {{action "cancel"}}> {{fa-icon "fa-mail-reply fa-2x"}} <br>
+<span class="col-md-3 col-md-offset-3" {{action "cancel"}}> <br>
             Cancel</span>
 
 <span class="col-md-3" {{action "submit"}}> {{fa-icon "fa-share fa-2x"}} <br>Save</span>
