--- a/app/components/sign-up-form/template.hbs
+++ b/app/components/sign-up-form/template.hbs
@@ -1,11 +1,12 @@
-{{email-input email=credentials.email}}
-{{password-input password=credentials.password}}
-{{password-confirmation-input password=credentials.passwordConfirmation}}
+<div class="user-auth">
+  {{email-input email=credentials.email}}
+  {{password-input password=credentials.password}}
+  {{password-confirmation-input password=credentials.passwordConfirmation}}
+</div>
+<div class="row">
+  <span{{action "reset"}} class="col-md-3 col-md-offset-3">{{#link-to "application"}}<a> <br>
+      Cancel</a>{{/link-to}}</span>
 
-<button type="submit" class="btn btn-primary" {{action "submit"}}>
-  Sign Up
-</button>
-
-<button class="btn btn-default" {{action "reset"}}>
-  Cancel
-</button>
+<span class="col-md-3"{{action "submit"}}><a><br>
+    Sign Up </a></span>
+</div>
