ALter Edit Profiles
Have the edit profile page
be injected into the same file that is housing the
change password form for testing
change the links to buttons on the edit profile form
change the profile form to have each form group be one
name each of those div form-group

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,1 +1,3 @@
-{{my-application model=model viewProfile="viewProfile" signOut="signOut"}}
+{{my-application model=model
+                  signOut="signOut"
+                viewProfile="viewProfile"}}
