--- a/app/profiles/edit/template.hbs
+++ b/app/profiles/edit/template.hbs
@@ -1,3 +1,4 @@
-{{profile-update profile=model
+{{!-- {{profile-update profile=model
                submit="save"
-               cancel="cancel"}}
+               cancel="cancel"}} --}}
+{{profile-update submit="submit" reset="reset"}}
