--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -11,14 +11,9 @@
           <li class="home col-md-4">
             <a href="#" {{action "signOut"}}> <br> Sign Out</a>
           </li>
-          <li class="home col-md-4">
-            <a href="profiles/edit" {{action "editAction"}}> <br> Profile Edit</a>
-          </li>
-          <li class="home col-md-3 col-md-offset-3">{{#link-to "profiles/edit"}} <br> Register Form{{/link-to}}</li>
-          {{!-- <li class="home col-md-4"><a href="exercises" {{action "createExercise"}}
-          > <br> Add Exercise </a>
-            </li> --}}
-            <li class="home col-sm-2">
+          <li class="home col-md-3 col-md-offset-3">
+            {{#link-to "profiles/edit"}} <br> Register Form{{/link-to}}</li>
+            <li class="home col-md-3 col-md-offset-3">
               {{#link-to 'exercises/new'}}<br> New Exercise{{/link-to}}
             </li>
         {{else}}
