--- a/app/components/profile-update/template.hbs
+++ b/app/components/profile-update/template.hbs
@@ -70,7 +70,7 @@
           id="favorite"
           value=profile.favorite}}
 </div>
-<button type="submit" class="btn btn-primary" {{action "submit"}}>
+<button type="submit" class="btn btn-primary" {{action "submitProfile"}}>
 Update Profile
 </button>
 
