--- a/app/profiles/edit/template.hbs
+++ b/app/profiles/edit/template.hbs
@@ -1,4 +1,4 @@
 {{!-- {{profile-update profile=model
                submit="save"
                cancel="cancel"}} --}}
-{{profile-update submit="submit" reset="reset"}}
+{{profile-update submitProfile="submitProfile" reset="reset"}}
