--- a/app/exercises/new/template.hbs
+++ b/app/exercises/new/template.hbs
@@ -1,3 +1,3 @@
 {{exercise-create exercise=model
-               submit="save"
+                 submitExercise="submitExercise"
                cancel="cancel"}}
