Start testing on the create ensure propert links that are working for get of exercises and profiles ensure that the button on the component is working with console log when that button is clicked

--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -7,12 +7,15 @@
         {{#if isAuthenticated}}
           <li class="home col-md-4">
             <a href="profiles" {{action "viewProfile"}}> <br> Profile </a>
+
           </li>
           <li class="home col-md-4">
             <a href="#" {{action "signOut"}}> <br> Sign Out</a>
           </li>
           <li class="home col-md-3 col-md-offset-3">
             {{#link-to "profiles/edit"}} <br> Register Form{{/link-to}}</li>
+            <li class="home col-md-3 col-md-offset-3">
+            {{#link-to "exercises"}} <br> My Exercise Log{{/link-to}}</li>
             <li class="home col-md-3 col-md-offset-3">
               {{#link-to 'exercises/new'}}<br> New Exercise{{/link-to}}
             </li>
