--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,3 +1,4 @@
 {{my-application model=model
                   signOut="signOut"
-                viewProfile="viewProfile"}}
+                viewProfile="viewProfile"
+                viewMyExercises="viewMyExercises"}}
