--- a/app/components/exercise-create/template.hbs
+++ b/app/components/exercise-create/template.hbs
@@ -43,3 +43,15 @@ Update Profile
 <button class="btn btn-default" {{action "cancel"}}>
   Cancel
 </button>
+
+
+<form {{action 'createItem' on='submit'}}>
+  {{input placeholder='New Item' value=newItem.content}}
+</form>
+
+<form {{action 'save' on='submit'}}>
+  {{input placeholder='List Title'
+  class='input-group form-control'
+  value=list.title
+}}
+</form>
