Created A post action
set an object to specific values
save the profile that the user created
in routes.js
bring the environemt back to being able to be worked on locally

--- a/app/profiles/edit/template.hbs
+++ b/app/profiles/edit/template.hbs
@@ -1,4 +1,4 @@
 {{!-- {{profile-update profile=model
                submit="save"
                cancel="cancel"}} --}}
-{{profile-update submitProfile="submitProfile" reset="reset"}}
+{{profile-update profile=model submitProfile="submitProfile" reset="reset"}}
