--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -15,6 +15,9 @@
           <li class="home col-md-3 col-md-offset-3">
             {{#link-to "profiles/edit"}} <br> Register Form{{/link-to}}</li>
             <li class="home col-md-3 col-md-offset-3">
+              <li class="home col-md-3 col-md-offset-3">
+                {{#link-to "profile"}} <br> testing{{/link-to}}</li>
+                <li class="home col-md-3 col-md-offset-3">
             {{#link-to "exercises"}} <br> My Exercise Log{{/link-to}}</li>
             <li class="home col-md-3 col-md-offset-3">
               {{#link-to 'exercises/new'}}<br> New Exercise{{/link-to}}
