--- a/app/exercises/template.hbs
+++ b/app/exercises/template.hbs
@@ -1,6 +1,6 @@
 <h1>My Workouts</h1>
 <ul>
-  {{#each model.exercises as |exercise|}}
+  {{#each model.exercise as |exercise|}}
   {{exercises-all exercise=exercise
                       display="display"}}
   {{/each}}
