--- a/app/profile/template.hbs
+++ b/app/profile/template.hbs
@@ -10,7 +10,7 @@
 
 {{outlet}}
 <hr>
-
+<span class="col-md-4 col-md-offset-4">{{#link-to "exercise"}}<br>My Exercises{{/link-to}}</span>
 <span class="col-md-4 col-md-offset-4">{{#link-to "change-password"}}<br>Change Password{{/link-to}}</span>
 </div>
 {{!-- {action "editAction" model}}> --}}
