--- a/app/exercise/template.hbs
+++ b/app/exercise/template.hbs
@@ -33,7 +33,7 @@
 {{model.name}} <br>
 <label for="description">Motivation:</label>
 {{model.description}} <br>
-<label for="duration">Favorite Exercise Method:</label>
+<label for="duration">favorite_exercises Exercise Method:</label>
 {{model.duration}} <br>
 
 
