Fix POST action
modified newProfile to profile

removed the set values which the object was execting
removed the form action attached to that form

--- a/app/profiles/edit/template.hbs
+++ b/app/profiles/edit/template.hbs
@@ -1,4 +1,1 @@
-{{!-- {{profile-update profile=model
-               submit="save"
-               cancel="cancel"}} --}}
-{{profile-update profile=model submitProfile="submitProfile" reset="reset"}}
+{{profile-update submitProfile="submitProfile" reset="reset"}}
