--- a/app/components/profile-update/template.hbs
+++ b/app/components/profile-update/template.hbs
@@ -2,15 +2,15 @@
 
 <h4>Tell us About what brought you here</h4>
 
-
+{{!-- <form {{action 'submitProfile' on='submit'}}> --}}
 <div class="form-group">
   <label for="username">Name You Go By</label>
   {{input placeholder="Put the name you prefer to be called"
           type="text"
           id="username"
           value=profile.username}}
-</div>
 
+</div>
 <div class="form-group">
   <label for="location">Location</label>
   {{input placeholder="Boston, MA etc"
@@ -40,3 +40,4 @@ Update Profile
 <button class="btn btn-default" {{action "cancel"}}>
   Cancel
 </button>
+{{!-- </form> --}}
