--- a/app/profile/template.hbs
+++ b/app/profile/template.hbs
@@ -4,7 +4,7 @@
 {{model.location}} <br>
 <label for="motivation">Motivation:</label>
 {{model.motivation}} <br>
-<label for="favorite">Favorite Exercise Method:</label>
+<label for="favorite_exercise">Favorite Exercise Method:</label>
 {{model.favorite}} <br>
 
 
@@ -12,5 +12,8 @@
 <hr>
 
 <span class="col-md-4 col-md-offset-4">{{#link-to "change-password"}}<br>Change Password{{/link-to}}</span>
+<span class="col-md-4 col-md-offset-4">{{#link-to "profile"}}<br>Change Password{{/link-to}}</span>
+</div>
+
 </div>
 {{!-- {action "editAction" model}}> --}}
