Remove all extra instances of exercises
remove all test files and links to exercises

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,4 +1,3 @@
 {{my-application model=model
                   signOut="signOut"
-                viewProfile="viewProfile"
-                viewMyExercises="viewMyExercises"}}
+                viewProfile="viewProfile"}}
