--- a/app/profile/template.hbs
+++ b/app/profile/template.hbs
@@ -4,13 +4,12 @@
 {{model.location}} <br>
 <label for="motivation">Motivation:</label>
 {{model.motivation}} <br>
-<label for="favorite_exercise">Favorite Exercise Method:</label>
+<label for="favorite">Favorite Exercise Method:</label>
 {{model.favorite}} <br>
 
 
 {{outlet}}
 <hr>
-<span class="col-md-4 col-md-offset-4">{{#link-to "exercise"}}<br>My Exercises{{/link-to}}</span>
 <span class="col-md-4 col-md-offset-4">{{#link-to "change-password"}}<br>Change Password{{/link-to}}</span>
 <span class="col-md-4 col-md-offset-4">{{#link-to "profile"}}<br>Change Password{{/link-to}}</span>
 </div>
