Ember build after exercise removal
ran ember build after updating databases
fixed html bars syntax errors

--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -13,10 +13,7 @@
           </li>
           <li class="home col-md-3 col-md-offset-3">
             {{#link-to "profiles/edit"}} <br> Register Form{{/link-to}}</li>
-            <li class="home col-md-3 col-md-offset-3">
-          <li>
-            {{#link-to "sign-up"}}Sign Up{{/link-to}}
-          </li>
+              <li class="application col-md-3 col-md-offset-3">{{#link-to "sign-up"}}Sign Up{{/link-to}}</li>
           <li>
             {{#link-to "sign-in"}}Sign In{{/link-to}}
           </li>
