--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -6,7 +6,7 @@
       <ul class="nav navbar-nav navbar-right">
         {{#if isAuthenticated}}
           <li class="home col-md-4">
-            <a href="profiles" {{action "viewProfile"}}> <br> Profile </a>
+            <a href="profiles"{{action "viewProfile"}}> <br> Profile </a>
 
           </li>
           <li class="home col-md-4">
@@ -18,6 +18,8 @@
             {{#link-to "exercises"}} <br> My Exercise Log{{/link-to}}</li>
             <li class="home col-md-3 col-md-offset-3">
               {{#link-to "exercises/new"}}<br> New Exercise{{/link-to}}</li>
+              <li class ="home col-md-3 col-md-offset-3">
+              {{#link-to 'profiles'}}<br>All Profiles{{/link-to}}</li>
         {{else}}
           <li>
             {{#link-to "sign-up"}}Sign Up{{/link-to}}
