--- a/app/profile/template.hbs
+++ b/app/profile/template.hbs
@@ -1,4 +1,4 @@
-<div class="profile-update">
+<div class="profile-new">
 <span><h1>{{model.username}}'s Profile </h1></span>
 <label for="location">Location:</label>
 {{model.location}} <br>
@@ -6,11 +6,11 @@
 {{model.motivation}} <br>
 <label for="favorite_exercise">Favorite Exercise Method:</label>
 {{model.favorite}} <br>
-
+{{delete-profile model=profile delete='delete'}}
 
 {{outlet}}
 <hr>
-<span class="col-md-4 col-md-offset-4">{{#link-to "exercise"}}<br>My Exercises{{/link-to}}</span>
+<span class="col-md-4 col-md-offset-4">{{#link-to "exercise"}}<br>Update Broke{{/link-to}}</span>
 <span class="col-md-4 col-md-offset-4">{{#link-to "change-password"}}<br>Change Password{{/link-to}}</span>
 <span class="col-md-4 col-md-offset-4">{{#link-to "profile"}}<br>Change Password{{/link-to}}</span>
 </div>
