--- a/app/profiles/create/template.hbs
+++ b/app/profiles/create/template.hbs
@@ -1,1 +1,1 @@
-{{profile-create profile=model submitProfile="submitProfile" reset="reset"}}
+{{profile-update submitProfile="submitProfile" reset="reset"}}
