Created a delete button
updated sendActions in the templates and components

--- a/app/profiles/create/template.hbs
+++ b/app/profiles/create/template.hbs
@@ -1,1 +1,1 @@
-{{profile-update submitProfile="submitProfile" reset="reset"}}
+{{profile-update profile=model submitProfile="submitProfile" reset="reset"}}
