--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -1,23 +1,23 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    {{navbar-header}}
-    {{#link-to "application" class="navbar-brand" }}Home Page{{/link-to}}
+    {{#link-to "application" class="navbar-brand" }}Play-Log{{/link-to}}
     <div class="collapse navbar-collapse" id="navigation">
       <ul class="nav navbar-nav navbar-right">
         {{#if isAuthenticated}}
-          <li class="home col-md-4">
-            <a href="profiles" {{action "viewProfile"}}> <br> Profile </a>
-
+        <div class="row">
+        <li class="home col-md-6">
+          <a href="profile" {{action "viewProfile"}}> <br> Profile </a>
           </li>
-          <li class="home col-md-4">
+          <li class="application col-lg-6 pull-right">
             <a href="#" {{action "signOut"}}> <br> Sign Out</a>
           </li>
-          <li class="home col-md-3 col-md-offset-3">
+          <li class="application col-md-6 pull-center">
             {{#link-to "profiles/edit"}} <br> Register Form{{/link-to}}</li>
-            <li class="home col-md-3 col-md-offset-3">
+          </div>
+            {{!-- <li class="application col-md-3 col-md-offset-3">
             {{#link-to "exercises"}} <br> My Exercise Log{{/link-to}}</li>
-            <li class="home col-md-3 col-md-offset-3">
-              {{#link-to "exercises/new"}}<br> View All {{/link-to}}</li>
+            <li class="application col-md-3 col-md-offset-3">
+              {{#link-to "exercises/new"}}<br> View All {{/link-to}}</li> --}}
         {{else}}
           <li>
             {{#link-to "sign-up"}}Sign Up{{/link-to}}
@@ -43,8 +43,9 @@
   <div class="container-fluid outlet col-lg-12 col-centered">
     <div class="centered">
       <h1>Play Together</h1>
-      <h4>Welcome to Encore, a place where you can log your exercises, your way. No
-  restrictions, no expectations</h4> {{outlet}}
+      <h4>Welcome to Play-Log, a place where you can log your exercises, your way. No
+  restrictions, no expectations. You can have, one two or multiple profiles depending
+on how you like to organise your activitites!</h4> {{outlet}}
     </div>
   </div>
 {{/if}}
