--- a/app/profile/template.hbs
+++ b/app/profile/template.hbs
@@ -4,8 +4,8 @@
 {{model.location}} <br>
 <label for="motivation">Motivation:</label>
 {{model.motivation}} <br>
-<label for="favorite_exercise">Favorite Exercise Method:</label>
-{{model.favorite}} <br>
+<label for="favorite">Favorite Exercise Method:</label>
+{{model.favorite_exercise}} <br>
 
 <hr>
 
@@ -14,8 +14,6 @@
 
 {{outlet}}
 
-<span class="col-md-4 col-md-offset-4">{{#link-to "exercise"}}<br>Update Broke{{/link-to}}</span>
+
 <span class="col-md-4 col-md-offset-4">{{#link-to "change-password"}}<br>Change Password{{/link-to}}</span>
-<span class="col-md-4 col-md-offset-4">{{#link-to "profile"}}<br>Change Password{{/link-to}}</span>
 </div>
-{{!-- {action "editAction" model}}> --}}
