--- a/app/components/my-application/template.hbs
+++ b/app/components/my-application/template.hbs
@@ -14,6 +14,8 @@
           <li class="application col-md-6 pull-center">
             {{#link-to "profiles/edit"}} <br> Register Form{{/link-to}}</li>
           </div>
+          <li class="application col-md-6 pull-center">
+            {{#link-to "profiles"}} <br>View All Profiles{{/link-to}}</li>
             {{!-- <li class="application col-md-3 col-md-offset-3">
             {{#link-to "exercises"}} <br> My Exercise Log{{/link-to}}</li>
             <li class="application col-md-3 col-md-offset-3">
