--- a/app/profile/template.hbs
+++ b/app/profile/template.hbs
@@ -4,8 +4,8 @@
 {{model.location}} <br>
 <label for="motivation">Motivation:</label>
 {{model.motivation}} <br>
-<label for="favorite">Favorite Exercise Method:</label>
-{{model.favorite_exercise}} <br>
+<label for="favorite_exercise">Favorite Exercise Method:</label>
+{{model.favorite}} <br>
 
 <hr>
 
